
Changes committed Apr. 21, 2010 by Curtis Duhn:

-	Added basic getting started instructions to README.

-	Created CHANGES file for tracking changes.

-	New Class: Controllers/DTAdViewController is a wrapper controller
	(i.e. a DTCompositeViewController) that loads and presents an ad underneath
	another sub-controller's view.  Works with or without a NIB.
	
-	New Class: Controllers/DTOpenXAdLoader works in concert with DTAdViewController
	to show ads served via the OpenX XML-RPC API.
	
-	New Class: DTButton generates glossy buttons programmatically.

-	-[DTImageView loadFromURL:] now tries to load the image from the local
	cache before issuing a remote request.
	
-	Added BOOL warnBeforeExit property to ACAboutViewController.  Prompts user
	before exiting the app if YES.

-	Fixed DTCompositeViewController so that it accepts DTTableViewControllers as 
	children in addition to DTViewControllers.  It now takes anything that implements
	<DTActsAsChildViewController>.

-	New Property: -DTTableViewController.containerViewController.

-	New: -[DT(Table)ViewController viewWillFirstAppear]

-	New: -[DT(Table)ViewController viewDidFirstAppear]

-	New Property: -DT(Table)ViewController.hasAppeared

-	Added a check to make sure a controller can't be added twice using
 	-[DTCompositeViewController addSubviewController:].

-	-[DTCompositeViewController removeSubviewController:] now sets the 
	subviewController's containerViewController to nil.
	
-	DTDataDrivenTableViewController now supports hasDynamicHeight for tables with
	programmatically created cells in cases where cellNibName isn't set.
	
- 	Bug: DTDataDrivenTableViewController wasn't setting the height when cellNibName
	was defined, and hasDynamicHeight returned NO.

-	New: -[DTNavigationController popToRootViewControllerAnimated:]

-	New: -[DTNavigationController popToViewController:animated:]

-	New: -[DTNavigationController popToViewControllerWithClass:animated:]
